Feat: Adicionar barra de menu fixa e layout inicial da home
- Cria o componente visual da barra de menu fixa no topo, com logo e links para YouTube, LinkedIn e GitHub.
- Adiciona estilos para a barra de menu e seus itens.
- Implementa estrutura inicial da página home, incluindo container estilizado e inclusão do componente <app-card>.
- Melhora a organização visual e prepara a base para navegação e conteúdo.

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,13 @@
-<p>menu-bar works!</p>
+<div class="manu-bar__container">
+  <div class="menu-bar__logo">
+    <img src="assets/ps-logo.png" alt="Logo PSstore" width="140px" height="32px" srcset="" />
+  </div>
+
+  <div class="menu-bar__item">
+    <ul>
+      <li><a href="">YOUTUBE</a></li>
+      <li><a href="">LINKEDIN</a></li>
+      <li><a href="">GITHUB</a></li>
+    </ul>
+  </div>
+</div>
