--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,13 +1,13 @@
 <div class="manu-bar__container">
   <div class="menu-bar__logo">
-    <img src="assets/ps-logo.png" alt="Logo PSstore" width="140px" height="32px" srcset="" />
+    <img src="assets/ps-logo.png" alt="Logo PS Store" width="140px" height="32px" srcset="" />
   </div>
 
   <div class="menu-bar__item">
     <ul>
-      <li><a href="">YOUTUBE</a></li>
-      <li><a href="">LINKEDIN</a></li>
-      <li><a href="">GITHUB</a></li>
+      <li><a href="#">YOUTUBE</a></li>
+      <li><a href="#">LINKEDIN</a></li>
+      <li><a href="#">GITHUB</a></li>
     </ul>
   </div>
 </div>
