--- a/src/app/components/card/card-pricing/card-pricing.component.css
+++ b/src/app/components/card/card-pricing/card-pricing.component.css
@@ -9,7 +9,7 @@
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
   color: antiquewhite;
-  font-family: Calibre;
+  font-family: Calibri;
 }
 
 
